[gd_scene load_steps=6 format=3 uid="uid://cm0fmwv4gkgwk"]

[ext_resource type="Script" path="res://scenes/menu/customize.gd" id="1_c5881"]
[ext_resource type="Theme" uid="uid://b8quhq0sg6j8c" path="res://resources/styles/label_font.tres" id="2_ka7fi"]
[ext_resource type="Texture2D" uid="uid://c4hug1rxgwgws" path="res://assets/logo.png" id="3_whyh2"]
[ext_resource type="Texture2D" uid="uid://cd4vdldg1vr7c" path="res://sprites/skins/default/fruit.png" id="4_falqc"]
[ext_resource type="Texture2D" uid="uid://btlsgid78phtv" path="res://sprites/skins/flowers/fruit.png" id="5_bvl4h"]

[node name="customize_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -430.0
offset_right = 200.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5881")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -430.0
offset_right = 200.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 430)
theme = ExtResource("2_ka7fi")

[node name="vbox" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -430.0
offset_right = 200.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/vbox"]
layout_mode = 2
texture = ExtResource("3_whyh2")
expand_mode = 4
stretch_mode = 4

[node name="buttons_container" type="VBoxContainer" parent="CanvasLayer/Control/vbox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Default" type="Button" parent="CanvasLayer/Control/vbox/buttons_container"]
layout_mode = 2
toggle_mode = true
text = "    DEFAULT  "

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/vbox/buttons_container/Default"]
position = Vector2(30, 24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_falqc")
hframes = 11

[node name="Flowers" type="Button" parent="CanvasLayer/Control/vbox/buttons_container"]
layout_mode = 2
toggle_mode = true
text = "   FLOWERS"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/vbox/buttons_container/Flowers"]
position = Vector2(30, 24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_bvl4h")
hframes = 11

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/vbox/buttons_container"]
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/Control/vbox/buttons_container"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="CanvasLayer/Control/vbox/buttons_container/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/vbox/buttons_container/Flowers" to="." method="_on_flowers_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/vbox/buttons_container/Back" to="." method="_on_back_pressed"]
